[project]
name = "deepcast"
version = "0.1.1"
description = "AI-powered podcast generator with text-to-speech capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "byigitt", email = "bbayburtlu@hotmail.com"}
]
dependencies = [
    "typer>=0.15.0,<0.16.0",
    "rich>=13.7.0,<14.0.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-openai>=0.0.5,<0.1.0",
    "fal-client>=0.5.0,<0.6.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-docx>=0.8.11,<0.9.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "EbookLib>=0.18,<0.19",
    "markdown>=3.5.1,<4.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "youtube-transcript-api>=0.6.1,<0.7.0",
    "html2text>=2020.1.16",
    "pydub>=0.25.1,<0.26.0",
]

[project.scripts]
deepcast = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "ruff>=0.1.9",
] 